Java 5 constructs: replaced some StringBuffer by StringBuilder in order to avoid unecessary synchronisation; rely on auto-boxing in order to give a chance to the JVM to reuse its cached values.
git-svn-id: https://svn.osgeo.org/geotools/geotools/trunk@28081 e5c1c795-43da-0310-a71f-fac65c449510